fix integration test project definition: integration test task
Thanks to gradle for their [example project](https://docs.gradle.org/current/samples/sample_java_modules_multi_project.html).

The custom jvm properties fix this error:

```
//java.lang.RuntimeException: java.lang.IllegalAccessError: class org.testfx.toolkit.impl.ToolkitServiceImpl (in module org.testfx) cannot access class com.sun.javafx.application.ParametersImpl (in module javafx.graphics) because module javafx.graphics does not export com.sun.javafx.application to module org.testfx
//        at org.testfx@4.0.16-alpha/org.testfx.util.WaitForAsyncUtils.waitFor(WaitForAsyncUtils.java:301)
...
```